--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,163 @@
-body {
+* {
+  padding: 0;
+  margin: 0;
   text-align: center;
-  margin: 0;
+  vertical-align: bottom;
+  box-sizing: border-box;
 }
-header {
-  background-color: #F15B31;
-  color: white;
-  padding: 30px 0 30px 0;
-}
-nav {
-  background-color: #00A6B3;
-  color: #FFFFFF;
-  padding: 20px 0 20px 0;
-}
-main {
-  width: 850px;
-  margin: 35px auto 35px auto;
-}
-footer {
-  text-transform: uppercase;
-  padding: 0 10px 0 10px;
-  background-color: #0D2C40;
-  color: #FFFFFF;
-  letter-spacing: .08em;
-  font-weight: 500;
-}
-h1 {
+
+html,
+body {
+  background-color: rgba(240, 240, 240, 1);
+  color: black;
+  min-width: 100vw;
   font-family: "Raleway", sans-serif;
-  font-size: 40px;
-  font-weight: 400;
-  text-transform: uppercase;
-  margin: 0;
 }
-h2 {
-  font-family: "Raleway", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
+
+header.game-header {
+  background-color: rgba(241, 91, 49, 1);
+  color: rgba(255, 255, 255, 1);
+  padding: 1.25rem 0;
+  display: flex;
+  justify-content: center;
+  flex-flow: row nowrap;
+}
+
+header.game-header h1 {
+  min-width: 40rem;
+  max-width: 40rem;
+  font-size: 3rem;
+  font-weight: 100;
   text-transform: uppercase;
 }
-p {
-  font-family: "Droid Serif", serif;
+
+nav.game-navbar {
+  background-color: rgba(0, 166, 179, 1);
+  padding: 1rem 0;
+  display: flex;
+  justify-content: center;
+  flex-flow: row nowrap;
 }
-p[class="copyright"] {
-  font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  float: left;
-  padding: 5px;
+
+.game-navbar ul {
+  min-width: 40rem;
+  max-width: 40rem;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
 }
-p[class="message"] {
-  font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  float: right;
-  padding: 5px;
+
+.game-navbar li {
+  padding: 0 0.5rem;
 }
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  content: " ";
-  clear: both;
-  height: 0;
-  font-size: 0;
+
+.game-navbar li:not(:last-child) {
+  border-right: solid 1px rgba(255, 255, 255, 1);
 }
-span[class="name"]{
-  color: #F15B31;
-  font-weight: 700;
-}
-a {
-  font-family: "Raleway", sans-serif;
-  color: inherit;
+
+.game-navbar a {
+  color: rgba(255, 255, 255, 1);
   text-transform: uppercase;
   text-decoration: none;
-  /* margin: auto 20px auto 20px; */
-  margin: 0 20px 0 20px;
-  border-bottom: 2px solid transparent;
 }
-a:hover {
-  border-color: #FFFFFF;
+
+.game-navbar a:hover {
+  text-decoration: underline;
 }
-img {
-  margin: 40px 8px 0px 8px;
+
+main.game-main {
+  background-color: rgba(240, 240, 240, 1);
+  margin: 1rem auto;
+  display: flex;
+  justify-content: center;
+  flex-flow: column nowrap;
+  /* sticky footer uses careful measurements (no floats!) */
+  height: calc(100vh - 96px - 51px - 32px - 35px);
+  max-width: 40rem;
+  min-width: 40rem;
+  overflow: hidden;
+}
+
+div.game-board {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+}
+
+.game-board img {
+  width: 100%;
+  max-width: 9rem;
+  height: 100%;
+  margin: 1rem 0;
+  border-radius: 6px;
+  box-shadow: 4px 4px 4px 1px rgba(13, 44, 64, 0.75);
+  cursor: pointer;
+  perspective: 100%;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+}
+
+.game-board img:not(:last-child) {
+  margin-right: 0.2rem;
+}
+
+.card-flipped {
+  pointer-events: none;
+  transform: rotateY(360deg);
+}
+
+div.about {
+  margin-top: 1rem;
+}
+
+ul.about {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+
+.about li {
+  padding: 0 0.5rem;
+  margin: 0.5rem 0;
+}
+
+.about li:not(:last-child) {
+  border-right: 1px solid rgba(0, 166, 179, 1);
+}
+
+.about a {
+  color: rgba(0, 166, 179, 1);
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.about a:hover {
+  text-decoration: underline;
+}
+
+footer.game-footer {
+  text-transform: uppercase;
+  padding: 0.5rem;
+  background-color: rgba(13, 44, 64, 1);
+  color: rgba(255, 255, 255, 1);
+  letter-spacing: .08em;
+  font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row nowrap;
+}
+
+footer.game-footer p {
+  color: rgba(255, 255, 255, 1);
+  font-weight: 200;
+}
+
+footer.game-footer a {
+  color: rgba(241, 91, 49, 1);
+  text-decoration: none;
+  font-weight: 700;
+}
+
+footer.game-footer a:hover {
+  text-decoration: underline;
 }
