--- a/css/style.css
+++ b/css/style.css
@@ -66,15 +66,15 @@ nav.game-navbar {
 }
 
 main.game-main {
+  /* sticky footer uses careful measurements (no floats!) */
+  height: calc(100vh - 96px - 51px - 32px - 35px);
+  max-width: 40rem;
+  min-width: 40rem;
   background-color: rgba(240, 240, 240, 1);
   margin: 1rem auto;
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
-  /* sticky footer uses careful measurements (no floats!) */
-  height: calc(100vh - 96px - 51px - 32px - 35px);
-  max-width: 40rem;
-  min-width: 40rem;
   overflow: hidden;
 }
 
@@ -103,7 +103,10 @@ div.game-board {
 
 .card-flipped {
   pointer-events: none;
-  transform: rotateY(360deg);
+  -moz-transform:    rotateX(360deg);
+  -o-transform:      rotateX(360deg);
+  -webkit-transform: rotateX(360deg);
+  transform:         rotateX(360deg);
 }
 
 div.about {
@@ -160,4 +163,104 @@ footer.game-footer a {
 
 footer.game-footer a:hover {
   text-decoration: underline;
+}
+
+@media only screen and (min-height : 0px) and (max-height : 687px) {
+
+  main.game-main {
+    /* sticky footer uses careful measurements (no floats!) */
+    height: calc(100vh - 96px - 51px - 32px - 35px); /* responsive */
+  }
+
+  div.instructions {
+    display: none;
+  }
+
+  div.game-board {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+  }
+
+  .game-board img {
+    width: 100%;
+    max-width: 9rem;
+    height: 100%;
+    margin: 0 0 1rem 0;
+    border-radius: 6px;
+    box-shadow: 4px 4px 4px 1px rgba(13, 44, 64, 0.75);
+    cursor: pointer;
+    perspective: 100%;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
+  }
+
+  .game-board img:not(:last-child) {
+    margin-right: 0.2rem;
+  }
+
+  .card-flipped {
+    pointer-events: none;
+    -moz-transform: rotateX(360deg);
+    -o-transform: rotateX(360deg);
+    -webkit-transform: rotateX(360deg);
+    transform: rotateX(360deg);
+  }
+
+  div.about {
+    margin-top: 1rem;
+    display: none; /* responsive */
+  }
+
+  ul.about {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+  }
+
+  .about li {
+    padding: 0 0.5rem;
+    margin: 0.5rem 0;
+  }
+
+  .about li:not(:last-child) {
+    border-right: 1px solid rgba(0, 166, 179, 1);
+  }
+
+  .about a {
+    color: rgba(0, 166, 179, 1);
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+
+  .about a:hover {
+    text-decoration: underline;
+  }
+
+  footer.game-footer {
+    text-transform: uppercase;
+    padding: 0.5rem;
+    background-color: rgba(13, 44, 64, 1);
+    color: rgba(255, 255, 255, 1);
+    letter-spacing: .08em;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row nowrap;
+  }
+
+  footer.game-footer p {
+    color: rgba(255, 255, 255, 1);
+    font-weight: 200;
+  }
+
+  footer.game-footer a {
+    color: rgba(241, 91, 49, 1);
+    text-decoration: none;
+    font-weight: 700;
+  }
+
+  footer.game-footer a:hover {
+    text-decoration: underline;
+  }
 }
