--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ div.game-board {
   justify-content: space-evenly;
 }
 
+div.game-board p {
+  text-align: justify;
+}
+
 .game-board img {
   width: 100%;
   max-width: 9rem;
@@ -168,99 +172,65 @@ footer.game-footer a:hover {
 @media only screen and (min-height : 0px) and (max-height : 687px) {
 
   main.game-main {
-    /* sticky footer uses careful measurements (no floats!) */
-    height: calc(100vh - 96px - 51px - 32px - 35px); /* responsive */
+    height: calc(100vh - 96px - 51px - 32px - 35px);
   }
 
   div.instructions {
     display: none;
   }
 
+  div.about {
+    margin-top: 0;
+    display: none;
+  }
+}
+
+@media only screen and (min-width : 0px) and (max-width : 639px) {
+  header.game-header {
+    padding: 0.75rem 0;
+  }
+
+  header.game-header h1 {
+    min-width: 100vw; /* responsive */
+    max-width: 100vw; /* responsive */
+    font-size: 2.5rem;
+  }
+
+  nav.game-navbar {
+    padding: 0.5rem 0;
+  }
+
+  .game-navbar ul {
+    min-width: 100vw;
+    max-width: 100vw;
+  }
+
+  main.game-main {
+    height: calc(100vh - 71px - 35px - 35px);
+    max-width: 100vw;
+    min-width: 100vw;
+    margin: 0rem auto;
+  }
+
   div.game-board {
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-evenly;
+    flex-flow: row wrap;
   }
 
   .game-board img {
-    width: 100%;
-    max-width: 9rem;
+    width: calc(100vw / 3);
+    max-width: calc(100vw / 3);
     height: 100%;
-    margin: 0 0 1rem 0;
-    border-radius: 6px;
-    box-shadow: 4px 4px 4px 1px rgba(13, 44, 64, 0.75);
-    cursor: pointer;
-    perspective: 100%;
-    transition: transform 0.5s;
-    transform-style: preserve-3d;
-  }
-
-  .game-board img:not(:last-child) {
-    margin-right: 0.2rem;
-  }
-
-  .card-flipped {
-    pointer-events: none;
-    -moz-transform: rotateX(360deg);
-    -o-transform: rotateX(360deg);
-    -webkit-transform: rotateX(360deg);
-    transform: rotateX(360deg);
-  }
-
-  div.about {
-    margin-top: 1rem;
-    display: none; /* responsive */
-  }
-
-  ul.about {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-  }
-
-  .about li {
-    padding: 0 0.5rem;
-    margin: 0.5rem 0;
-  }
-
-  .about li:not(:last-child) {
-    border-right: 1px solid rgba(0, 166, 179, 1);
-  }
-
-  .about a {
-    color: rgba(0, 166, 179, 1);
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-
-  .about a:hover {
-    text-decoration: underline;
+    margin: 0.8rem 0;
   }
 
   footer.game-footer {
-    text-transform: uppercase;
-    padding: 0.5rem;
-    background-color: rgba(13, 44, 64, 1);
-    color: rgba(255, 255, 255, 1);
-    letter-spacing: .08em;
-    font-weight: 500;
-    display: flex;
-    justify-content: space-between;
+    width: 100vw;
+    justify-content: center;
     flex-flow: row nowrap;
   }
 
-  footer.game-footer p {
-    color: rgba(255, 255, 255, 1);
-    font-weight: 200;
-  }
-
-  footer.game-footer a {
-    color: rgba(241, 91, 49, 1);
-    text-decoration: none;
-    font-weight: 700;
-  }
-
-  footer.game-footer a:hover {
-    text-decoration: underline;
+  footer.game-footer p.inspired-by {
+    display: none;
   }
 }
