--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,6 @@ div.game-board {
   justify-content: space-evenly;
 }
 
-div.game-board p {
-  text-align: justify;
-}
-
 .game-board img {
   width: 100%;
   max-width: 9rem;
@@ -232,5 +228,35 @@ footer.game-footer a:hover {
 
   footer.game-footer p.inspired-by {
     display: none;
+  }
+}
+
+/**
+ * animation fade-in:
+ * http://animista.net/play/entrances/fade-in/fade-in
+ */
+ 
+.fade-in {
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
